--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>React App</title>
+    <title>Netflix Roulette</title>
+    <link rel="stylesheet" href="bundle.css" />
   </head>
   <body>
     <div id="app"></div>
